--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -65,6 +65,9 @@ options:
   list_set_deferrable_load_single_constant:
     - set_deferrable_load_single_constant: false
     - set_deferrable_load_single_constant: false
+  list_set_deferrable_startup_penalty:
+    - set_deferrable_startup_penalty: 0.0
+    - set_deferrable_startup_penalty: 0.0
   load_peak_hours_cost: 0.1907
   load_offpeak_hours_cost: 0.1419
   photovoltaic_production_sell_price: 0.065
@@ -132,6 +135,8 @@ schema:
     - treat_deferrable_load_as_semi_cont: "bool?"
   list_set_deferrable_load_single_constant:
     - set_deferrable_load_single_constant: "bool?"
+  list_set_deferrable_startup_penalty:
+    - set_deferrable_startup_penalty: "float?"
   load_cost_forecast_method: "list(hp_hc_periods|csv)?"
   production_price_forecast_method: "list(constant|csv)?" #optional
   load_peak_hours_cost: "float(0,)?"
