--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,10 @@
   "appPort": ["7123:8123", "7357:4357"],
   "postStartCommand": "bash devcontainer_bootstrap",
   "runArgs": ["-e", "GIT_EDITOR=code --wait", "--privileged"],
+	// Security issue, may be needed for Podman
+  // "runArgs": ["-e", "GIT_EDITOR=code --wait", "--privileged","--userns=keep-id","--pid=host"],
+  // "remoteUser": "root",
+	// "containerUser": "root",
   "containerEnv": {
     "WORKSPACE_DIRECTORY": "${containerWorkspaceFolder}"
   },
